--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Desktop Virtual Assistant</title>
 
+    <link rel="shortcut icon" href="assets/images/logo.ico" type="image/x-icon" >
+
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
 
@@ -57,6 +59,7 @@
 	<script src="assets/textillate/jquery.lettering.js"></script>
 
     <script src="main.js"></script>
+    <script src="/eel.js"></script>
 
 </body>
 </html>
