--- a/frontend/index.html
+++ b/frontend/index.html
@@ -31,7 +31,57 @@
 
     <div class="container">
 
-        <section id="Start">
+        <!-- Authentication Choice Screen -->
+        <section id="AuthChoice">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="d-flex justify-content-center align-items-center" style="height: 80vh;">
+                        <div class="text-center">
+                            <h1 class="text-light mb-5 siri-message">Choose Authentication Method</h1>
+                            <div class="d-flex justify-content-center gap-4 mt-5">
+                                <button id="FaceAuthBtn" class="auth-choice-btn">
+                                    <i class="bi bi-person-check" style="font-size: 3rem; margin-bottom: 1rem;"></i>
+                                    <h3 class="text-light">Face Authentication</h3>
+                                </button>
+                                <button id="PasscodeAuthBtn" class="auth-choice-btn">
+                                    <i class="bi bi-key" style="font-size: 3rem; margin-bottom: 1rem;"></i>
+                                    <h3 class="text-light">Passcode</h3>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Passcode Input Screen -->
+        <section id="PasscodeAuth" hidden>
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="d-flex justify-content-center align-items-center" style="height: 80vh;">
+                        <div class="text-center">
+                            <h1 class="text-light mb-5 siri-message">Enter 6-Digit Passcode</h1>
+                            <div class="passcode-container">
+                                <div class="passcode-inputs d-flex justify-content-center gap-3 mb-4">
+                                    <input type="text" class="passcode-digit" maxlength="1" pattern="[0-9]" inputmode="numeric" autocomplete="off">
+                                    <input type="text" class="passcode-digit" maxlength="1" pattern="[0-9]" inputmode="numeric" autocomplete="off">
+                                    <input type="text" class="passcode-digit" maxlength="1" pattern="[0-9]" inputmode="numeric" autocomplete="off">
+                                    <input type="text" class="passcode-digit" maxlength="1" pattern="[0-9]" inputmode="numeric" autocomplete="off">
+                                    <input type="text" class="passcode-digit" maxlength="1" pattern="[0-9]" inputmode="numeric" autocomplete="off">
+                                    <input type="text" class="passcode-digit" maxlength="1" pattern="[0-9]" inputmode="numeric" autocomplete="off">
+                                </div>
+                                <div id="PasscodeError" class="text-danger mb-3" style="display: none;">
+                                    <i class="bi bi-exclamation-triangle"></i> Incorrect passcode. Please try again.
+                                </div>
+                                <button id="VerifyPasscodeBtn" class="btn btn-glow">Verify</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="Start" hidden>
             <div class="row">
                 <div class="col-lg-12">
                     <div class="d-flex justify-content-center align-items-center" style="height: 80vh;">
