--- a/frontend/index.html
+++ b/frontend/index.html
@@ -768,9 +768,11 @@
 
     <script src="script.js"></script>
 
-    <!-- Siri Wave -->
+    <!-- Custom Siri Wave - Optimized for Performance -->
+    <script src="assets/js/custom-siriwave.js"></script>
+    <!-- Old Siri Wave (backup) -->
     <!-- <script src="https://unpkg.com/siriwave/dist/siriwave.umd.min.js"></script> -->
-    <script src="assets/js/siriwave.min.js"></script>
+    <!-- <script src="assets/js/siriwave.min.js"></script> -->
 
     <!-- Textillate JS -->
     <script src="http://jschr.github.io/textillate/jquery.textillate.js"></script>
